# distributed-ledger

./: .gitignore  README.md  dune-project
distributed_ledger/: dune-project
distributed_ledger/lib/: consensus.ml  dag.ml  dune  ledger.ml  storage.ml  transaction.ml  vertex.ml
distributed_ledger/lib/crypto/: dune
lib/: dune
test/: dune
utils/: avalance.proto  transaction.proto
utils/utils_1/: dune-project
utils/utils_1/lib/: dune
utils/utils_1/test/: dune
utils/utils_2/: dune-project
utils/utils_2/lib/: dune
utils/utils_2/test/: dune
utils/utils_3/query_engine/: dune-project
utils/utils_3/query_engine/lib/: dune
utils/utils_3/query_engine/test/: dune
