(lang dune 3.17)

(name distributed_dag_blockchain)

(generate_opam_files true)

(source
 (github hayley-d/distributed-ledger))

(authors "Hayley Dodkins <hayleydodkins@protonmail.com>")

(maintainers "Hayley Dodkins <hayleydodkins@protonmail.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name distributed_dag_blockchain)
 (synopsis "Distributed decentralized DAG-based blockchin implemented in OCaml")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
